fixed bottom white space color

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,6 @@
 @tailwind utilities;
 
 html, body {
-    margin: 0 !important;
-    padding: 0 !important;
-    overflow-x: hidden !important;
+    background-color: black;
   }
   
